Refactor NamedLocationLoading and integrate debug loading command
- Replaced `SplitLocationColors` with `LoadLocations` to streamline location loading logic.
- Added new debug command `LoadLocationsCommand` in `MWCommands` and integrated it into `MainWindow` for quick access.
- Removed unused namespaces and cleaned up redundant code in `NamedLocationLoading` and `StringOps`.
- Transitioned from `Globals` to `AppData` for state management consistency across multiple components.
- Added extensions in `FileManager` to include file existence checks and directory handling in mod and vanilla data spaces.
- Updated `FileInformation` and `FileTypeInformation` for improved documentation and structure.

--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -96,6 +96,11 @@
         <CommandBinding Command = "mainWindow:MwCommands.OpenUIElementsBrowserCommand"
                         Executed = "UIElementsBrowserCommandCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
+        
+        <!-- Command Bindings for Debug Loading Triggers -->
+        <CommandBinding Command = "mainWindow:MwCommands.LoadLocationsCommand"
+                        Executed = "LoadLocationsCommand_OnExecuted"
+                        CanExecute = "CommandCanAlwaysExecute" />
 
     </Window.CommandBindings>
 
@@ -253,6 +258,8 @@
                         <Image Source = "../../../Assets/Icons/16x16/WindowFrame16x16.png" />
                     </uc:SearchableMenuItem.Icon>
                 </uc:SearchableMenuItem>
+                <uc:SearchableMenuItem Header = "Load Locations"
+                                       Command = "mainWindow:MwCommands.LoadLocationsCommand" />
             </uc:SearchableMenuItem>
         </Menu>
     </styleClasses:BaseWindow.HeaderContent>
