Add Globals Browser debug window and integrate into MainWindow
- Introduced `GameObjectBrowser` for exploring static fields and properties in `Globals`.
- Added `GameObjectBrowser.xaml` and `GameObjectBrowser.xaml.cs`.
- Registered a new command `OpenGlobalsBrowserCommand` in `MWCommands`.
- Integrated the debug window into `MainWindow` under the Debug menu.
- Updated `WindowKeyBinds` to include a shortcut (`F7`) for opening the Globals Browser.
- Enhanced `Globals` with a browsable list wrapper for locations under debug compiler flag.
- Fixed NumberOfArgumentMissMatchException in the PropertyGrids property analyzing

--- a/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
+++ b/Arcanum.UI/Components/UserControls/BaseControls/PropertyGrid.xaml
@@ -5,7 +5,8 @@
              xmlns:delayedEvents = "clr-namespace:Arcanum.Core.Utils.DelayedEvents;assembly=Arcanum.Core"
              xmlns:converters = "clr-namespace:Arcanum.UI.Components.Converters"
              xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
-             xmlns:baseControls = "clr-namespace:Arcanum.UI.Components.UserControls.BaseControls">
+             xmlns:baseControls = "clr-namespace:Arcanum.UI.Components.UserControls.BaseControls"
+             xmlns:sys = "clr-namespace:System;assembly=System.Runtime">
 
 
     <UserControl.Resources>
@@ -76,7 +77,9 @@
                                             BorderThickness = "0"
                                             Padding = "0"
                                             HorizontalAlignment = "Stretch"
-                                            VerticalAlignment = "Stretch" />
+                                            VerticalAlignment = "Stretch"
+                                            MaxValue="{x:Static sys:Int32.MaxValue}"
+                                            MinValue="{x:Static sys:Int32.MinValue}"/>
         </DataTemplate>
 
         <DataTemplate x:Key = "DecimalTemplate"
