--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -52,9 +52,6 @@
         <CommandBinding Command = "mainWindow:MwCommands.OpenConsoleCommand"
                         Executed = "OpenConsoleCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
-        <CommandBinding Command = "mainWindow:MwCommands.DebugParsingCommand"
-                        Executed = "DebugParsingCommand_OnExecuted"
-                        CanExecute = "CommandCanAlwaysExecute" />
         <CommandBinding Command = "mainWindow:MwCommands.OpenEffectWikiCommand"
                         Executed = "OpenEffectWikiCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
@@ -93,14 +90,19 @@
 
 
         <!-- Command Bindings for Debug MenuItems -->
+        <CommandBinding Command = "mainWindow:MwCommands.LoadingStepRunnerCommand"
+                        Executed = "LoadingStepRunnerCommand_OnExecuted"
+                        CanExecute = "CommandCanAlwaysExecute" />
+
         <CommandBinding Command = "mainWindow:MwCommands.OpenUIElementsBrowserCommand"
                         Executed = "UIElementsBrowserCommandCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
-        
+
         <CommandBinding Command = "mainWindow:MwCommands.OpenGlobalsBrowserCommand"
                         Executed = "GlobalsBrowserCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
-        
+
+
         <!-- Command Bindings for Debug Loading Triggers -->
         <CommandBinding Command = "mainWindow:MwCommands.LoadLocationsCommand"
                         Executed = "LoadLocationsCommand_OnExecuted"
@@ -253,8 +255,8 @@
             <uc:SearchableMenuItem Header = "Debug">
                 <uc:SearchableMenuItem Header = "Globals Browser"
                                        Command = "mainWindow:MwCommands.OpenGlobalsBrowserCommand" />
-                <uc:SearchableMenuItem Header = "Run Location Parsing"
-                                       Command = "mainWindow:MwCommands.DebugParsingCommand" />
+                <uc:SearchableMenuItem Header = "Loading Strep Runner"
+                                       Command = "mainWindow:MwCommands.LoadingStepRunnerCommand" />
                 <uc:SearchableMenuItem Header = "Browse Mod Metadata"
                                        Click = "MenuItem_OnClick" />
                 <uc:SearchableMenuItem Header = "UI Elements Browser"
