Refactor and remove deprecated parsing steps
- Removed `DebugStep`, `IParsingStep`, and `ParsingStepBase` as part of parsing system overhaul.
- Replaced usage of `ParsingStepBase` with updated `FileLoadingService` across multiple components.
- Introduced `DefaultParsingStep` for centralized and streamlined parsing logic in `ParsingMaster`.
- Updated `LocationLoading` to utilize `FileLoadingService` with improved dependency management.
- Enhanced `RunLoadingStep` to handle `FileDescriptors` directly and display comprehensive debug information.
- Adjusted `MainWindow` to use updated logic, removing obsolete location parsing methods and redundant commands.
- Improved diagnostics with `ErrorManager` updates, adding debug output for diagnostics in development.

--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -101,6 +101,10 @@
         <CommandBinding Command = "mainWindow:MwCommands.OpenGlobalsBrowserCommand"
                         Executed = "GlobalsBrowserCommand_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
+        
+        <CommandBinding Command = "mainWindow:MwCommands.GCCommand"
+                        Executed = "GCCommand_OnExecuted"
+                        CanExecute = "CommandCanAlwaysExecute"/>
 
 
         <!-- Command Bindings for Debug Loading Triggers -->
@@ -253,6 +257,8 @@
             </uc:SearchableMenuItem>
 
             <uc:SearchableMenuItem Header = "Debug">
+                <uc:SearchableMenuItem Header = "Garbage Collector"
+                                       Command = "mainWindow:MwCommands.GCCommand" />
                 <uc:SearchableMenuItem Header = "Globals Browser"
                                        Command = "mainWindow:MwCommands.OpenGlobalsBrowserCommand" />
                 <uc:SearchableMenuItem Header = "Loading Strep Runner"
